# testing

./: CMakeLists.txt  README.md  package.xml
config/: bebop1_cam.txt  bebop2_cam.txt  bebop2_pcalib.txt  cam_bebop1.yaml  cam_bebop2.yaml  camera.txt  camera_matrix  pcalib  pcalib.txt  xbox360.yaml  xboxOne.yaml
data/: Readme.md
launch/: bebop_backandforth.launch  bebop_backtracker.launch  bebop_boomerang.launch  bebop_rotation.launch  bebop_square.launch  dso_ros.launch  geometric_calibration.launch  indoor_slam_gazebo_xbox360.launch  indoor_teleop.launch  indoor_teleop_combo.launch  indoor_teleop_gcalib.launch  indoor_teleop_record.launch  joy_teleop_real.launch  joy_teleop_sim.launch  outdoor_slam_gazebo_xbox360.launch  param_test.launch  rosbag_dso.launch  rosbag_localization.launch  service_test.launch  teleop.launch  teleop_dso.launch  teleop_localization.launch  teleop_record.launch  view_rosbag.launch
params/: ekf_robot_localization.yaml
rviz_cfg/: indoor_teleop.rviz  indoor_teleop_rosbag.rviz
src/: backandforth.cpp  backtracker.cpp  boomerang.cpp  cmdbooster.cpp  cmdcompensator.cpp  cmdlimiter.cpp  cmdveladjustor.cpp  cmdvelbooster.cpp  cmdvelcompensator.cpp  cmdvellimiter.cpp  cmdvelrepeater.cpp  eigenserviceprovider.cpp  frodojoint.cpp  frodopath.cpp  robottrajectoryfrompathservice.cpp  rotation.cpp  servicetest.cpp  square.cpp  testparam.cpp  tftodo.cpp  transodom.cpp  ultimetry.cpp
srv/: ComputeTransformationMatrix.srv  GetEigenValue.srv  GetRobotTrajectoryFromPath.srv
